// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composerTokenizer base tests Boolean 1`] = `
[
  {
    "end": 1,
    "length": 1,
    "parenthesesCode": "",
    "start": 0,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "end": 4,
    "length": 3,
    "parenthesesCode": "1",
    "start": 1,
    "type": "SYMBOL",
    "value": "AND",
  },
  {
    "end": 5,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "BOOLEAN",
          "value": true,
        },
        {
          "type": "BOOLEAN",
          "value": false,
        },
      ],
      "parent": "AND",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 4,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 9,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "BOOLEAN",
          "value": true,
        },
        {
          "type": "BOOLEAN",
          "value": false,
        },
      ],
      "parent": "AND",
    },
    "length": 4,
    "parenthesesCode": "1",
    "start": 5,
    "type": "SYMBOL",
    "value": "true",
  },
  {
    "end": 10,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "type": "BOOLEAN",
          "value": true,
        },
        {
          "type": "BOOLEAN",
          "value": false,
        },
      ],
      "parent": "AND",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 9,
    "type": "ARG_SEPARATOR",
    "value": ",",
  },
  {
    "end": 15,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "type": "BOOLEAN",
          "value": true,
        },
        {
          "type": "BOOLEAN",
          "value": false,
        },
      ],
      "parent": "AND",
    },
    "length": 5,
    "parenthesesCode": "1",
    "start": 10,
    "type": "SYMBOL",
    "value": "false",
  },
  {
    "end": 16,
    "length": 1,
    "parenthesesCode": "1",
    "start": 15,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
]
`;

exports[`composerTokenizer base tests formula token 1`] = `
[
  {
    "end": 1,
    "length": 1,
    "parenthesesCode": "",
    "start": 0,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "end": 4,
    "length": 3,
    "parenthesesCode": "1",
    "start": 1,
    "type": "SYMBOL",
    "value": "SUM",
  },
  {
    "end": 5,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 4,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 6,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 5,
    "type": "NUMBER",
    "value": "1",
  },
  {
    "end": 7,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 6,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 8,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 7,
    "type": "ARG_SEPARATOR",
    "value": ",",
  },
  {
    "end": 9,
    "length": 1,
    "parenthesesCode": "11",
    "start": 8,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 10,
    "length": 1,
    "parenthesesCode": "11",
    "start": 9,
    "type": "NUMBER",
    "value": "1",
  },
  {
    "end": 11,
    "length": 1,
    "parenthesesCode": "11",
    "start": 10,
    "type": "OPERATOR",
    "value": "+",
  },
  {
    "end": 12,
    "length": 1,
    "parenthesesCode": "11",
    "start": 11,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "end": 13,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "11",
    "start": 12,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "end": 14,
    "functionContext": {
      "argPosition": 2,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 13,
    "type": "ARG_SEPARATOR",
    "value": ",",
  },
  {
    "end": 17,
    "functionContext": {
      "argPosition": 2,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 3,
    "parenthesesCode": "1",
    "start": 14,
    "type": "SYMBOL",
    "value": "ADD",
  },
  {
    "end": 18,
    "functionContext": {
      "argPosition": 2,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 17,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 19,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 2,
        },
        {
          "type": "NUMBER",
          "value": 3,
        },
      ],
      "parent": "ADD",
    },
    "length": 1,
    "parenthesesCode": "12",
    "start": 18,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 20,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 2,
        },
        {
          "type": "NUMBER",
          "value": 3,
        },
      ],
      "parent": "ADD",
    },
    "length": 1,
    "parenthesesCode": "12",
    "start": 19,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "end": 21,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "type": "NUMBER",
          "value": 2,
        },
        {
          "type": "NUMBER",
          "value": 3,
        },
      ],
      "parent": "ADD",
    },
    "length": 1,
    "parenthesesCode": "12",
    "start": 20,
    "type": "ARG_SEPARATOR",
    "value": ",",
  },
  {
    "end": 22,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "type": "NUMBER",
          "value": 2,
        },
        {
          "type": "NUMBER",
          "value": 3,
        },
      ],
      "parent": "ADD",
    },
    "length": 1,
    "parenthesesCode": "12",
    "start": 21,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 23,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "type": "NUMBER",
          "value": 2,
        },
        {
          "type": "NUMBER",
          "value": 3,
        },
      ],
      "parent": "ADD",
    },
    "length": 1,
    "parenthesesCode": "12",
    "start": 22,
    "type": "NUMBER",
    "value": "3",
  },
  {
    "end": 24,
    "functionContext": {
      "argPosition": 2,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "12",
    "start": 23,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "end": 25,
    "functionContext": {
      "argPosition": 3,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 24,
    "type": "ARG_SEPARATOR",
    "value": ",",
  },
  {
    "end": 26,
    "functionContext": {
      "argPosition": 3,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
        {
          "left": {
            "type": "NUMBER",
            "value": 1,
          },
          "right": {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "BIN_OPERATION",
          "value": "+",
        },
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 2,
            },
            {
              "type": "NUMBER",
              "value": 3,
            },
          ],
          "type": "FUNCALL",
          "value": "ADD",
        },
        {
          "type": "NUMBER",
          "value": 4,
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 25,
    "type": "NUMBER",
    "value": "4",
  },
  {
    "end": 27,
    "length": 1,
    "parenthesesCode": "1",
    "start": 26,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
]
`;

exports[`composerTokenizer formula with nested function 1`] = `
[
  {
    "end": 1,
    "length": 1,
    "parenthesesCode": "",
    "start": 0,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "end": 2,
    "length": 1,
    "parenthesesCode": "",
    "start": 1,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 5,
    "length": 3,
    "parenthesesCode": "1",
    "start": 2,
    "type": "SYMBOL",
    "value": "SIN",
  },
  {
    "end": 6,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 0,
        },
      ],
      "parent": "SIN",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 5,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 7,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 0,
        },
      ],
      "parent": "SIN",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 6,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 8,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 0,
        },
      ],
      "parent": "SIN",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 7,
    "type": "NUMBER",
    "value": "0",
  },
  {
    "end": 9,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 0,
        },
      ],
      "parent": "SIN",
    },
    "length": 1,
    "parenthesesCode": "1",
    "start": 8,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 10,
    "length": 1,
    "parenthesesCode": "1",
    "start": 9,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "end": 11,
    "length": 1,
    "parenthesesCode": "",
    "start": 10,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 12,
    "length": 1,
    "parenthesesCode": "",
    "start": 11,
    "type": "OPERATOR",
    "value": "+",
  },
  {
    "end": 13,
    "length": 1,
    "parenthesesCode": "",
    "start": 12,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 16,
    "length": 3,
    "parenthesesCode": "2",
    "start": 13,
    "type": "SYMBOL",
    "value": "SUM",
  },
  {
    "end": 17,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "2",
    "start": 16,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 18,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "2",
    "start": 17,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 21,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 3,
    "parenthesesCode": "21",
    "start": 18,
    "type": "SYMBOL",
    "value": "COS",
  },
  {
    "end": 22,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
      ],
      "parent": "COS",
    },
    "length": 1,
    "parenthesesCode": "21",
    "start": 21,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 23,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "type": "NUMBER",
          "value": 1,
        },
      ],
      "parent": "COS",
    },
    "length": 1,
    "parenthesesCode": "21",
    "start": 22,
    "type": "NUMBER",
    "value": "1",
  },
  {
    "end": 24,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "21",
    "start": 23,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "end": 25,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "2",
    "start": 24,
    "type": "ARG_SEPARATOR",
    "value": ",",
  },
  {
    "end": 26,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "2",
    "start": 25,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 29,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 3,
    "parenthesesCode": "22",
    "start": 26,
    "type": "SYMBOL",
    "value": "ABS",
  },
  {
    "end": 30,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "operand": {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "UNARY_OPERATION",
          "value": "-",
        },
      ],
      "parent": "ABS",
    },
    "length": 1,
    "parenthesesCode": "22",
    "start": 29,
    "type": "LEFT_PAREN",
    "value": "(",
  },
  {
    "end": 31,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "operand": {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "UNARY_OPERATION",
          "value": "-",
        },
      ],
      "parent": "ABS",
    },
    "length": 1,
    "parenthesesCode": "22",
    "start": 30,
    "type": "OPERATOR",
    "value": "-",
  },
  {
    "end": 32,
    "functionContext": {
      "argPosition": 0,
      "args": [
        {
          "operand": {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "UNARY_OPERATION",
          "value": "-",
        },
      ],
      "parent": "ABS",
    },
    "length": 1,
    "parenthesesCode": "22",
    "start": 31,
    "type": "NUMBER",
    "value": "1",
  },
  {
    "end": 33,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "22",
    "start": 32,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
  {
    "end": 34,
    "functionContext": {
      "argPosition": 1,
      "args": [
        {
          "args": [
            {
              "type": "NUMBER",
              "value": 1,
            },
          ],
          "type": "FUNCALL",
          "value": "COS",
        },
        {
          "args": [
            {
              "operand": {
                "type": "NUMBER",
                "value": 1,
              },
              "type": "UNARY_OPERATION",
              "value": "-",
            },
          ],
          "type": "FUNCALL",
          "value": "ABS",
        },
      ],
      "parent": "SUM",
    },
    "length": 1,
    "parenthesesCode": "2",
    "start": 33,
    "type": "SPACE",
    "value": " ",
  },
  {
    "end": 35,
    "length": 1,
    "parenthesesCode": "2",
    "start": 34,
    "type": "RIGHT_PAREN",
    "value": ")",
  },
]
`;
